# MLEvaluation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_app.py
docs/: ARROW_FIXES_DOCUMENTATION.md  ARROW_PLOTLY_FIXES.md  ARROW_SERIALIZATION_FIXES.md  AUTO_PREPARATION_GUIDE.md  COMPLETE_FIXES_SUMMARY.md  DATA_UPLOAD_FEATURE_SUMMARY.md  ENHANCED_DATA_PREPARATION_SUMMARY.md  ENHANCED_FEATURES_GUIDE.md  ENHANCED_IMPLEMENTATION_COMPLETE.md  ENHANCED_UI_COMPONENTS_GUIDE.md  FIXES_IMPLEMENTATION_COMPLETE.md  FIX_SUMMARY_AND_USER_GUIDE.md  IMPLEMENTATION_COMPLETE.md  LOGGING_DOCUMENTATION.md  NUMPY_INT64_FIX_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SHAP_FIXES_SUMMARY.md  SHAP_VALUES_FIX_FINAL.md  STREAMLIT_NUMPY_INT64_FIX.md  TESTING_GUIDE.md  UI_IMPROVEMENTS_SUMMARY.md
sample_datasets/: comprehensive_test_dataset.csv  correlation_analysis_dataset.csv  feature_engineering_dataset.csv  missing_values_dataset.csv  problematic_dataset.csv  sample_customer_churn.csv  sample_data_quality_issues.csv  sample_employee_performance.csv  sample_imbalanced_medical.csv  sample_product_quality.csv  sample_stratification_error.csv  single_class_dataset.csv
scripts/: analyze_shap_values.py  create_enhanced_datasets.py  create_problematic_data.py  create_sample_data.py  create_sample_datasets.py  debug_format_error.py  final_validation.py  shap_fixes.py
src/: __init__.py  app.py  test_imports.py
tests/: __init__.py  final_validation_report.py  simple_test_enhanced.py  test_advanced_preparation.py  test_arrow_fixes_comprehensive.py  test_arrow_plotly_fixes.py  (+24 more)
(+12 files in other folders)
